various colour fixes for dark mode

--- a/src/style.css
+++ b/src/style.css
@@ -102,7 +102,7 @@
   --accent-foreground: oklch(0.985 0 0);
   --warning: oklch(0.65 0.12 75);
   --warning-foreground: oklch(0.05 0 0);
-  --destructive: oklch(0.396 0.141 25.723);
+  --destructive: oklch(0.506 0.164 25.723);
   --destructive-foreground: oklch(0.637 0.237 25.331);
   --border: oklch(0.3 0 0);
   --input: oklch(0.269 0 0);
